--- a/homework_04/css/style.css
+++ b/homework_04/css/style.css
@@ -137,25 +137,25 @@ span.charm-name {
 }
 
 
-.task2-section h3, .task2-section p{
+.task2-section p{
   font-family: "Poppins",sans-serif;
   line-height: 1.5;
+  font-style: normal;
   text-align: left;
 }
 
-.task2-section h3{
-  text-decoration: none;
+.task2-section p{
   font-size: 20px;
   font-weight: 500;
-  letter-spacing: normal;
-  text-transform: none;
   color: #1a1a1a;
-  
 }
 
-.task2-section p{
+.task2-section p ~ p{
   font-size: 18px;
+  font-weight: 400;
   color: #808080;
 }
+
+
 
 
