--- a/homework_05/css/style.css
+++ b/homework_05/css/style.css
@@ -21,8 +21,8 @@ h2{
 }
 
 .wrapper{
-  min-width: 100%;
   min-height: 100%;
+  overflow:clip;
 }
 
 [class$="-section"]{
@@ -43,7 +43,7 @@ h2{
 }
 
 .container{
-  max-width: 1090px;
+  max-width: 1050px;
   margin: 0 auto;
 }
 
@@ -77,27 +77,28 @@ h2{
 }
 .cards-block {
   font-size: 0;
+  margin-left:-15px;
+  margin-right: -15px;
 }
-.card-item-container{
-  margin-right:30px;
+.card-container{
+  padding-left:20px;
+  padding-right: 20px;
   display: inline-block;
-  padding:0px 4px;
-  max-width: 238px;
   vertical-align: top;
 }
 
-.card-item-container.lowered {
+.card-container.lowered {
   padding-top:48px;
 }
 
-.cards-item {
+.card {
   padding:35px 40px;
   width: 100%;
   max-width: 230px;
   background-color: #fff;
 }
 
-.cards-item.blau{
+.card.blau{
   color:white;
   background-color: #5A54F2;;
 }
@@ -110,7 +111,7 @@ h2{
   width: 72px;
   margin-bottom: 20px;
 }
-.cards-item > .title {
+.card > .title {
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 16px;
@@ -119,15 +120,15 @@ h2{
   color: #252B42;
 }
 
-.cards-item.blau > .title{
+.card.blau > .title{
   color:white;
 }
 
 
-.cards-item > .line-container{
+.card > .line-container{
   margin-bottom: 20px;
 }
-.cards-item > .description {
+.card > .description {
   font-family: "Montserrat",sans-serif;
   line-height: 1.4;
   letter-spacing: 0.2px;
