--- a/homework_07/css/style.css
+++ b/homework_07/css/style.css
@@ -40,9 +40,6 @@ body {
   line-height: 1.21;
   margin-bottom: 31px;
 }
-.section-experts h3>span{
-  font-weight: 700;
-}
 
 .section-experts ul{
   font-size: 0px;
@@ -51,7 +48,7 @@ body {
 
 .section-experts li{
   display: inline-block;
-  padding:0 9.5px;
+  padding:0 9.5px 19px 9.5px;
   vertical-align: top;
   max-width: 406px;
   width: 100%;
@@ -68,6 +65,11 @@ body {
   padding: 20px;
 }
 
+.section-experts li a>img{
+  height: 266px;
+  width: 100%;
+}
+
 .section-experts li>div:hover{
   background-color: #FFBE48;
   box-shadow: 0px 384px 108px 0px rgba(0, 0, 0, 0.00), 0px 246px 98px 0px rgba(0, 0, 0, 0.01), 0px 138px 83px 0px rgba(0, 0, 0, 0.05), 0px 62px 62px 0px rgba(0, 0, 0, 0.09), 0px 15px 34px 0px rgba(0, 0, 0, 0.10);
@@ -80,52 +82,63 @@ body {
 }
 
 
-.section-experts a{
+.section-experts li>div>a{
   color: #FE3F3F;
+}
+
+.section-experts a:hover{
+  text-decoration: underline;
 }
 /* -------Task 02--------------- */
 
-.section-best-faculty{
-  padding:55px 0 42px;
+.text-section{
+  margin: 153px 59px 139px 0;
+  max-width: 528px;
+  padding-right: 10px;
   color: #412672;
 }
 
-.section-best-faculty>div>div{
-  max-width: 518px;
-}
-
-.section-best-faculty>div>div>*:not(:last-child){
+.text-section>*:not(:last-child){
   margin-bottom: 20px;
 }
 
-.section-best-faculty h3{
+.text-section>h3{
   font-size: 34px;
-  line-height: 1.205;
+  line-height: 1.206;
 }
 
-.section-best-faculty h3>span{
-  font-weight: 700;
-}
-
-.section-best-faculty p{
+.text-section>p{
   font-size: 22px;
   line-height: 1.227;
 }
 
-.section-best-faculty li{
-  color: #4F4F4F;
-  font-size: 20px;
-  line-height: 2.55;
+.text-section>ul{
+  padding: 13px 0;
 }
 
-.section-best-faculty li:before{
-  content: "";
-  vertical-align: middle;
-  width:29px;
-  height: 29px;
-  background: url(../img/check.svg) 0 0/29px no-repeat;
-  margin-right: 15px;
+.text-section>ul>li{
+  padding-left: 44px;
+  color:#4F4F4F;
+  font-size: 20px;
+  line-height: 1.45;
 }
+
+
+
+.text-section>ul>li:not(:last-child){
+  margin-bottom: 21px;
+}
+
+.text-section>ul>li:before{
+  vertical-align: bottom;
+  content: '';
+  background: url(../img/check.svg) center/29px no-repeat;
+  width: 29px;
+  height: 29px;
+  margin-right: 15px;
+  margin-left: -44px;
+}
+
 
 /* -------Task 03--------------- */
 
