--- a/homework_13/css/style.css
+++ b/homework_13/css/style.css
@@ -301,6 +301,9 @@ body {
 
 .faculty-in-ca-section__body{
   width: 45%;
+  display: flex;
+  flex-direction: column;
+  gap:20px;
 }
 .title-section--dark{
   color:#412672;
