--- a/homework_13/css/style.css
+++ b/homework_13/css/style.css
@@ -220,11 +220,8 @@ body {
   background-color: #412672;
 }
 
-
-
 .faculty-section__title{
   margin-bottom:31px;
-
 }
 
 .faculty-section__cards {
@@ -262,6 +259,7 @@ body {
   line-height: 1.26;
 }
 .card__read-more {
+  align-self: flex-start;
   position: relative;
   color: #FE3F3F;
   line-height: 1.26;
@@ -380,18 +378,22 @@ body {
   width: 80px;
 }
 
-.achievement-item__content-wrapper{
+.achievement-item__info{
   display: flex;
   flex-direction: column;
   align-items: center;
   flex-shrink: 0;
   color: #fff;
 }
-.achievement-item__number {
+
+.achievement-item__info > p{
+  line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+}
+
+.achievement-item__info > p > strong{
+  line-height: 1;
   font-size: 24px;
   font-weight: 700;
-}
-.achievement-item__desc {
-  
-  line-height: 1.6;
 }
