--- a/homework_15/css/style.css
+++ b/homework_15/css/style.css
@@ -337,8 +337,7 @@ body {
   margin-bottom: 60px;
 
 }
-.section-news__container {
-}
+
 .section-news__title{
   text-align: center;
   margin-bottom: 32px;
@@ -443,12 +442,9 @@ body {
   .card-news__title {
     font-size: 18px;
   }
-}
-
-
-.footer {
-}
-.footer__container {
-}
-.footer__title {
+  .label-news {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
